# log6302a-tp6

./: pyproject.toml  rapport.ipynb
